--- a/pipernet/main.html
+++ b/pipernet/main.html
@@ -23,7 +23,7 @@
    
    <div class="jumbotron flex">
      <div class="container">
-       <p class="image-text text-jumbotron">PiperNet is here</p>
+       <div class="image-text text-jumbotron">PiperNet is here</div>
      </div>
    </div>
    
@@ -45,7 +45,7 @@ An autonomous peer-to-peer network featuring distributed storage powered by univ
    
    <div class="hero flex">
      <div class="container">
-       <p class="image-text text-hero">We’re in this together! All of our computers and phones join in a network to make the strongest supercomputer the world has ever seen.</p>
+       <div class="image-text text-hero">We’re in this together! All of our computers and phones join in a network to make the strongest supercomputer the world has ever seen.</div>
      </div>
    </div>
    
