--- a/uber-eats/stores/stores.html
+++ b/uber-eats/stores/stores.html
@@ -30,60 +30,60 @@
                     </div>
                     <h1 class="stores-title">Рестораны в Москве</h1>
                     <div class="grid">
-                        <div class="stores-card">
+                        <a href="../restaurant/restaurant.html" class="stores-card">
                             <img src="../assets/images/card_1.png" alt="" class="stores-image">
                             <div class="stores-store">Макдоналдс — газетный</div>
                             <div class="stores-tags">₽₽ • Бургеры</div>
                             <div class="stores-waiting">25 - 35 мин</div>
-                        </div>
-                        <div class="stores-card">
+                        </a>
+                        <a href="../restaurant/restaurant.html" class="stores-card">
                             <img src="../assets/images/card_2.png" alt="" class="stores-image">
                             <div class="stores-store">DimSum & Co — ЦДМ</div>
                             <div class="stores-tags">₽ • Японская • Китайская • Азиатская</div>
                             <div class="stores-waiting">40 - 50 мин</div>
-                        </div>
-                        <div class="stores-card">
+                        </a>
+                        <a href="../restaurant/restaurant.html" class="stores-card">
                             <img src="../assets/images/card_3.png" alt="" class="stores-image">
                             <div class="stores-store">ДвижОК — Манежная</div>
                             <div class="stores-tags">₽ • Американская • Европейская</div>
                             <div class="stores-waiting">35 - 45 мин</div>
-                        </div>
-                        <div class="stores-card">
+                        </a>
+                        <a href="../restaurant/restaurant.html" class="stores-card">
                             <img src="../assets/images/card_4.png" alt="" class="stores-image">
                             <div class="stores-store">НЯ — NHA</div>
                             <div class="stores-tags">₽₽ • Вьетнамская</div>
                             <div class="stores-waiting">30 - 40 мин</div>
-                        </div>
-                        <div class="stores-card">
+                        </a>
+                        <a href="../restaurant/restaurant.html" class="stores-card">
                             <img src="../assets/images/card_5.png" alt="" class="stores-image">
                             <div class="stores-store">Точка Дзы — Цветной</div>
                             <div class="stores-tags">₽₽ • Вьетнамская</div>
                             <div class="stores-waiting">40 - 50 мин</div>
-                        </div>
-                        <div class="stores-card">
+                        </a>
+                        <a href="../restaurant/restaurant.html" class="stores-card">
                             <img src="../assets/images/card_6.png" alt="" class="stores-image">
                             <div class="stores-store">Cinnabon</div>
                             <div class="stores-tags">₽ • Выпечка • Десерты • Капкейки</div>
                             <div class="stores-waiting">25 - 35 мин</div>
-                        </div>
-                        <div class="stores-card">
+                        </a>
+                        <a href="../restaurant/restaurant.html" class="stores-card">
                             <img src="../assets/images/card_7.png" alt="" class="stores-image">
                             <div class="stores-store">PIZZELOVE</div>
                             <div class="stores-tags">₽₽ • Пицца</div>
                             <div class="stores-waiting">15 - 25 мин</div>
-                        </div>
-                        <div class="stores-card">
+                        </a>
+                        <a href="../restaurant/restaurant.html" class="stores-card">
                             <img src="../assets/images/card_8.png" alt="" class="stores-image">
                             <div class="stores-store">Zю кафе — Тверская</div>
                             <div class="stores-tags">₽₽ • Японская</div>
                             <div class="stores-waiting">25 - 35 мин</div>
-                        </div>
-                        <div class="stores-card">
+                        </a>
+                        <a href="../restaurant/restaurant.html" class="stores-card">
                             <img src="../assets/images/card_9.png" alt="" class="stores-image">
                             <div class="stores-store">Bar BQ Cafe — Манежная</div>
                             <div class="stores-tags">₽₽₽ • Европейская</div>
                             <div class="stores-waiting">30 - 40 мин</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
